solved minor issue when clicking play, the song upload button would shift up

--- a/css/home.css
+++ b/css/home.css
@@ -123,6 +123,7 @@
 #import-button:active{
   color: gray;
   font-size: 33px;
+  margin: 1px
 }
 
 #song-upload-input{
